css/master.css
/* ... */
.contact-icons a:hover{
  color: #01BABE;
  transition: 0.3s;
}

/* --------------------- TYPOGRAPHY --------------------- */

h1, h2, h3, h4, h5, li.list-heading {
  color: #6B7D7E;
  font-family: 'Lustria', serif;
}


/* Mobile sizes */

h1 {
  font-size: 2.8rem;
  letter-spacing: -0.1rem;
  line-height: 4.0rem;
  margin-bottom: 3.2rem;
}

h2 {
  font-size: 2.4rem;
  letter-spacing: 0;
  line-height: 3.6rem;
  margin-bottom: 1.6rem;
}

h3 {
  font-size: 2.0rem;
  letter-spacing: 0;
  line-height: 3.6rem;
  margin-bottom: 1.6rem;
}

h4 {
  font-size: 1.6rem;
  letter-spacing: 0;
  line-height: 3.2rem;
}

h5 {
  font-size: 1.8rem;
  letter-spacing: 0;
  line-height: 3.2rem;
  margin-bottom: 2.4rem;
}

h6 {
  color: #F7A17E;
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
  font-size: 1.2rem;
  letter-spacing: 0.2rem;
  line-height: 3.6rem;
  margin-bottom: 1.6rem;
  text-transform: uppercase;
}

p {
  color: #6B7D7E;
  font-family: 'Open Sans', sans-serif;
}

p.paragraph-large {
  font-size: 1.8rem;
  letter-spacing: 0;
  line-height: 2.8rem;
  margin-bottom: 3.2rem;
}

p.paragraph-medium, .button {
  font-size: 1.4rem;
  letter-spacing: 0;
  line-height: 2.4rem;
}

p.paragraph-medium-bold {
  font-weight: 700;
  font-size: 1.4rem;
  letter-spacing: 0;
  line-height: 2.4rem;
}

p.paragraph-medium {
  margin-bottom: 1.6rem;
}


p.paragraph-small, .details-column ul li{
  font-family: 'OpenSans', sans-serif;
  font-size: 1.2rem;
  letter-spacing: 0;
  line-height: 1.8rem;
  margin-bottom: 1.6rem;
}

p.copyright-text {
  font-family: 'OpenSans', sans-serif;
  font-size: 1.0rem;
  color: rgba(107,125,126,0.80);
  letter-spacing: 0;
  line-height: 2.0rem;
}

caption {
  font-family: 'OpenSans', sans-serif;
  font-size: 1.2rem;
  color: rgba(107,125,126,0.80);
  letter-spacing: 0;
  line-height: 2.0rem;
}

blockquote {
  color: #017F82;
  font-family: Lustria, serif;
  font-size: 2.4rem;
  line-height: 3.6rem;
  letter-spacing: normal;
  text-align: center;
}



/* --------------------- HEADER SECTION --------------------- */
header {
  min-height: 100vh;
  /*background-image: url("file:///Users/j_colville/GRAPHIC-DESIGN-RELATED/BLOC/Module15-Portfolio/portfolio/img/hero-bg-shapes.png");*/
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.intro {
  color: #01BABE;
  margin-bottom: 2.0rem;
}
/* --------------------- NAV BAR --------------------- */

/* Basic nav styling */

nav {
  padding: 1.0rem 2.8rem;
}

ul {
  list-style-type: none;
}

a {
  color: #6B7D7E;
  font-family: 'Open Sans', sans-serif;
  text-transform: none;
  text-decoration: none;
  transition: 0.3s;
}

a:hover{
  color: #017F82;
}

.logo a {
  text-decoration: none;
}

.menu li {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.1rem;
  padding: 2.0rem;
}

.menu li.logo, li.toggle{
  padding: 1.0rem 0rem;
}

/* Reversed basic styling */
a.light {
  color: #FFF;
  font-family: 'Open Sans', sans-serif;
  text-transform: none;
  text-decoration: none;
  transition: 0.3s;
}

a.light:hover{
  opacity: .7;
}


/* Mobile */

.menu {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.toggle {
  order: 1;
}

.item {
  width: 100%;
  text-align: center;
  order: 2;
  display:none;
}

.item.active {
  display:block;
}


.hero-text {
  display: flex;
  justify-content: center;
  flex-direction: column;
  min-height: 100vh;
}


/* --------------------- Projects --------------------- */
.project {
  width: 100%;
  min-height: 100vh;
}
.casestudy-text {
  text-align: center;
  max-width: 75%;
  margin: auto;
}

.casestudy-text h6 {
  color: #F7A17E;
  margin-bottom: 1.2rem;
}

.view-casestudy-btn {
  background-color: #017F82;
  border: 0rem;
  border-radius: .4rem;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  height: 4.8rem;
  margin-bottom: 4.8rem;
  padding: 1.2rem 3.2rem 1.6rem 3.2rem;
  transition: 0.3s;
  width: auto;
}


.view-casestudy-btn:hover {
  background-color: #01BABE;
  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
  color: #FFF;
}

.button, .view-casestudy-btn a, .mobile-proto-btn a, .focal-std-btn a{
  color: #FFF;
  font-weight: 600;
  line-height: 0rem;
  letter-spacing: 0.1rem;
}


.casestudy-image img{
  display: block;
  margin: auto;
  position: relative;
  right: 10%;
  width:100%;
  max-width: 38.6rem;
  padding-top: 4.8rem;

}

/* --------------------- FOOTER --------------------- */
footer {
  /*background-image: url("file:///Users/j_colville/GRAPHIC-DESIGN-RELATED/BLOC/Module15-Portfolio/portfolio/img/hero-bg-shapes.png");
  background-color: #F2F5F5;*/
  background-size: cover;
  background-repeat: repeat-x;
  padding: 6.4rem 2.8rem 2.8rem 2.8rem;
  text-align: center;
}

.footer-content {
  border-top: 1px solid rgba(107,125,126,0.2);
  padding-top: 4.8rem;
}

.copyright {
  padding: 4.8rem 0rem 0rem 0rem;
  letter-spacing: 1.0rem;
}
/* ... */

